[package]
name = "bitcounts"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-eyre = "0.3.1"
clap = { version = "4.5.4", features = ["derive", "usage"] }
stderrlog = "0.6.0"
log = "0.4.21"
bitset = "0.1.2"
